--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 
     "build:href": "ng build --base-href ./",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/directivesignals/* ./docs -f",
+    "copy:dist": "copyfiles dist/directive-signals/* ./docs -f",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist"
   },
   "private": true,
